# NMEAParser

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  GPSDashboard.cpp  JSONUtils.h  Makefile  NMEAParser.cpp  NMEAParser.h  NMEASentences.h  NMEASource.h  ProjectJourney.md  README.md  SQLiteLogger.cpp  SafeQueue.h  WebServer.cpp  WebServer.h  firehose.sh  gps_parser_app  gps_test  main.cpp  math_test  nmea_final  package-lock.json  test_conc  tool_test  unit_test  voyage_data.db
frontend/: package-lock.json
frontend/src/: App.css  App.jsx
include/: FleetManager.hpp  GPSDashboard.h  JSONUtils.h  NMEAParser.h  SQLiteLogger.h  SafeQueue.h
scripts/: firehose.sh
src/: GPSDashboard.cpp  NMEAParser.cpp  WebServer.cpp  benchmark.cpp  main.cpp  test_concurrency.cpp
tests/: test_json.cpp  test_parser.cpp  test_queue.cpp  test_server_manual.cpp
